--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
+    "luxon": "^1.25.0",
     "moment": "^2.29.1",
     "rails-ujs": "^5.2.4-4",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.12",
-    "vue-ctk-date-time-picker": "^2.5.0",
+    "vue-datetime": "^1.0.0-beta.14",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
     "vue-turbolinks": "^2.1.0"
