gem削除,yarnでbootstrap追加,navメニューの切り出し

--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "funclub",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "axios": "^0.21.1",
-    "jquery": "^3.5.1",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
     "moment": "^2.29.1",
+    "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
